@@ -6,6 +6,8 @@
 - Add support for clientid_prefixes variable.
 - Add support for the clientid config variable for controlling bridge client
   ids.
+- Add the --no-subscribe option to mosquitto_sub which can be used when
+  reconnecting a client that is using the -c option to disable clean session.
 
 0.9.2 - 20110208
 ================
